# Simple_Scope

./: .gitignore  LICENSE  README.md  build.py  claude.md  pyproject.toml  run_simplescope.bat
Simple_Scope/: main.py  requirements.txt
Simple_Scope/app/: __init__.py  config.py  gui copy.py  gui.py  logger.py  nw_lab_utils.py  pyvisa_utils.py  scope_controller.py  simple_scope.py  utils.py  version.py
Simple_Scope/app/scope_controller/: __init__.py  base_scope_driver.py  base_scpi.py  tektronix_scope_driver.py
Simple_Scope/resources/: Simple_Scope_Help.md
Simple_Scope/tests/: jupyter-example.py
enviroment/: create_env_from_environment_file.bat  environment.yml  export_env_to_yml.bat  simplescope.yml
pyinstaller_config/: build.py  build_commands.sh  build_script.bat  directory.spec  directory_test.py  hook_pyvisa.py  packaging_guide.md  post_build.py  pre_build.py  single_file.py  single_file.spec
